--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
 <span style="background-color:red; color:white; padding:20px; margin-left:20px"><a href="https://berlin.timesavr.net/prod/registration.php?cid=2261" style="color:white">REGISTRATION FORM</a></span>
             </p>
           </div>
+<p style="color:red">WE ARE HIRING!! Looking for a Level 2 or above Early Childhood Educator. Apply via email or phone, contact details below.</p>
         </div>
       </section>
 	  <section class="row tm-pt-4 tm-pb-6">
@@ -314,13 +315,7 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
 	  <h5 style="background-color:white; padding:12px; text-align:center">REVIEWS</h5><br><br>
 	  <div class="fb-post" style="margin:10px" data-href="https://e.facebook.com/lisa.k.markovich/posts/10157828604761364" data-width="700" data-show-text="true"><blockquote cite="https://www.facebook.com/lisa.k.markovich/posts/10157828604761364" class="fb-xfbml-parse-ignore"><p>We could not be happier with the care Victoria receives at Little Angels Daycare.  The staff are friendly, educated,...</p>Posted by <a href="#" role="button">Lisa Kingston</a> on&nbsp;<a href="https://www.facebook.com/lisa.k.markovich/posts/10157828604761364">Monday, 9 August 2021</a></blockquote></div>
 	  <div class="fb-post" style="margin:10px" data-href="https://en-gb.facebook.com/nod.sawulabrown/posts/4413037648783127" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/nod.sawulabrown/posts/4413037648783127" class="fb-xfbml-parse-ignore"><p>My son goes to Little Angels and he absolutely loves it. He get so excited to go everyday, and he even asks me to take him on the weekends. Great staff, friendly owners. I’m so happy we found them!</p>Posted by <a href="#" role="button">Nod Snowden</a> on&nbsp;<a href="https://www.facebook.com/nod.sawulabrown/posts/4413037648783127">Saturday, 17 July 2021</a></blockquote></div>
-	  <div class="fb-post" style="margin:10px" data-href="https://en-gb.facebook.com/jasper.jass.3/posts/4034689643318680" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/jasper.jass.3/posts/4034689643318680" class="fb-xfbml-parse-ignore"><p>Fully licensed daycare and After school care.
-Highly experienced and caring staff.
-Walking distance from schools.
-Subsidy available for eligible families.
-Definitely recommend!!!</p>Posted by <a href="#" role="button">Jay Singh</a> on&nbsp;<a href="https://www.facebook.com/jasper.jass.3/posts/4034689643318680">Saturday, 26 June 2021</a></blockquote></div>
-	 	 <div class="fb-post" style="margin:10px" data-href="https://en-gb.facebook.com/harpreet.klairgarcha/posts/3066551163666928" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/harpreet.klairgarcha/posts/3066551163666928" class="fb-xfbml-parse-ignore"><p>Highly recommend my kids really enjoyed their all the teachers very genuine,loving,patient and very friendly thank you very much Mr jaskaran ❤️🤩🤩🤩</p>Posted by <a href="https://www.facebook.com/harpreet.klairgarcha">Harpreet Kaur</a> on&nbsp;<a href="https://www.facebook.com/harpreet.klairgarcha/posts/3066551163666928">Monday, 21 June 2021</a></blockquote></div>
-		 </section>
+	  </section>
 	  <br><br>
 	  
       <!-- row -->
