--- a/about.html
+++ b/about.html
@@ -65,8 +65,8 @@ https://templatemo.com/tm-532-next-level
           <div class="tm-page-col-left tm-welcome-box tm-bg-gradient">
             <p class="tm-welcome-text">
               <em
-                >DIRECTOR - Jay Klair<br><br>
-				ASSISTANT DIRECTOR - Faran Syed</em
+                >DIRECTOR - Faran Syed<br><br>
+				ASSISTANT DIRECTOR - Roxanne Porter</em
               >
             </p>
           </div>
