--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1024" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Camrose Little Angels Daycare</title>
+    <title>Camrose Little Angels Daycare Society</title>
 <!--
 Next Level CSS Template
 https://templatemo.com/tm-532-next-level
@@ -96,7 +96,7 @@ img {vertical-align: middle;}
         <div class="col-lg-4 col-10">
           <div class="tm-brand-container">
             <div class="tm-brand-texts">
-              <h2 class="text-uppercase tm-brand-name">Camrose Little Angels</h2>
+              <h2 class="text-uppercase tm-brand-name">Camrose Little Angels Daycare Society</h2>
             </div>
           </div>
         </div>
@@ -241,11 +241,11 @@ Friday.</em>
               Our Philosophy
             </h2>
             <p class="tm-mb-6">
-              Camrose Little Angels Daycare believes that children are resourceful, capable and active learners
+              Camrose Little Angels Daycare Society believes that children are resourceful, capable and active learners
 whose learning, growth and development are profoundly influenced by the quality care and
 relationships they receive. It is every child's right to have an open, engaging, and responsive
 environment where they explore the world through play.<br><br>
-Camrose Little Angels Daycare provides children's experience in a safe and nurturing
+Camrose Little Angels Daycare Society provides children's experience in a safe and nurturing
 environment where their social, emotional, physical and cognitive development is supported.
 These environments are intended to promote positive self-identity and a sense of belonging.
 Children will have open and flexible environments where playful exploration, problem solving,
@@ -254,7 +254,7 @@ a sense of belonging where children feel nurtured and supported.
             </p>
             <p class="mb-0">
            	  Play is integral to children's learning and richly formative in their capacity for relationship. Play
-is the work of children. Camrose Little Angels believes that children experience the world
+is the work of children. Camrose Little Angels Daycare Society believes that children experience the world
 through play and educators play a pivotal role in providing these positive play experiences, and
 becoming co-learners, co-researchers, and co-imagineers of possibilities.
 <br>
