--- a/index.html
+++ b/index.html
@@ -305,8 +305,16 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
         </div>
       </section>
 	  
+      <section style="background-color:rgb(255, 97, 124); padding:20px; margin-left:10%; margin-right:10%">
+        <h5 style="background-color:white; padding:12px; text-align:center; color: red;">NEWS</h5><br><br>
+        <div>
+            <div style="background-color:white; padding:12px; text-align:left">Daycare will be posting news on this bulletin board from now on.</div><br>
+            <div style="background-color:white; padding:12px; text-align:left">Please mail any feedback.</div>
+        </div>
+        </section><br><br>
+
 	  <section style="background-color:#add8ff; padding:20px">
-	  <h5 style="background-color:white; padding:12px; text-align:center">REVIEWS</h5><br><br>
+	  <h5 style="background-color:white; padding:12px; text-align:center;">REVIEWS</h5><br><br>
 	  <div class="fb-post" style="margin:10px" data-href="https://e.facebook.com/lisa.k.markovich/posts/10157828604761364" data-width="700" data-show-text="true"><blockquote cite="https://www.facebook.com/lisa.k.markovich/posts/10157828604761364" class="fb-xfbml-parse-ignore"><p>We could not be happier with the care Victoria receives at Little Angels Daycare.  The staff are friendly, educated,...</p>Posted by <a href="#" role="button">Lisa Kingston</a> on&nbsp;<a href="https://www.facebook.com/lisa.k.markovich/posts/10157828604761364">Monday, 9 August 2021</a></blockquote></div>
 	  <div class="fb-post" style="margin:10px" data-href="https://en-gb.facebook.com/nod.sawulabrown/posts/4413037648783127" data-width="350" data-show-text="true"><blockquote cite="https://www.facebook.com/nod.sawulabrown/posts/4413037648783127" class="fb-xfbml-parse-ignore"><p>My son goes to Little Angels and he absolutely loves it. He get so excited to go everyday, and he even asks me to take him on the weekends. Great staff, friendly owners. I’m so happy we found them!</p>Posted by <a href="#" role="button">Nod Snowden</a> on&nbsp;<a href="https://www.facebook.com/nod.sawulabrown/posts/4413037648783127">Saturday, 17 July 2021</a></blockquote></div>
 	  </section>
@@ -324,10 +332,11 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
                   Contact
                 </h3>
                 <p class="tm-call-to-action-description">
-				Address - 4610 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
-				Email - littleangels@camrosecare.ca <br>
-				Phone - (780) 678-0701 <span style="color:red">(Faran Syed)</span><br>
-				Facebook - <a href="https://facebook.com/camroselittleangels.ca"> facebook.com/camroselittleangels.ca</a>
+				4610 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
+				littleangels@camrosecare.ca <br>
+				(780) 678-0701 - <span style="color:red">Faran Syed (Director)</span><br>
+        (587) 282-1755 - <span style="color:red">Adrienne Perry (Assistant Director)</span><br>
+				<a href="https://facebook.com/camroselittleangels.ca"> facebook.com/camroselittleangels.ca</a>
                 </p>
               </div>
             </div>
