--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@ https://templatemo.com/tm-532-next-level
             <p class="tm-welcome-text">
               <em
                 >DIRECTOR - Faran Syed<br><br>
-				ASSISTANT DIRECTOR - Roxanne Porter</em
+				ASSISTANT DIRECTOR - Adrienne Perry</em
               >
             </p>
           </div>
