--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
       <section style="background-color:rgb(255, 97, 124); padding:20px; margin-left:10%; margin-right:10%">
         <h5 style="background-color:white; padding:12px; text-align:center; color: red;">NEWs</h5><br><br>
         <div>
-            <div style="background-color:white; padding:12px; text-align:left">We will be closed on Monday October 2nd for Truth and Reconcilliation Day.</div><br>
+            <div style="background-color:white; padding:12px; text-align:left">We will be closed on Monday October 2nd for Truth and Reconcilliation Day and October 9th for Thanksgiving Day.</div><br>
             <div style="background-color:white; padding:12px; text-align:left">Please mail any feedback.</div>
         </div>
         </section><br><br>
