--- a/gallery.html
+++ b/gallery.html
@@ -96,6 +96,78 @@ https://templatemo.com/tm-532-next-level
                   />
                 </figure>
               </div>
+		    <div class="tm-gallery-item category-2">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/thirteen.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
+		    <div class="tm-gallery-item category-2">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/fourteen.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
+		    <div class="tm-gallery-item category-2">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/fifteen.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
+		    <div class="tm-gallery-item category-2">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/sixteen.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
+		    <div class="tm-gallery-item category-2">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/seventeen.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
+		    <div class="tm-gallery-item category-2">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/eighteen.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
+		    <div class="tm-gallery-item category-2">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/nineteen.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
+		    <div class="tm-gallery-item category-2">
+                <figure class="effect-bubba">
+                  <img
+                    src="img/gallery/twenty.jpeg"
+                    alt="Gallery item"
+                    class="img-fluid"
+                  />
+                </figure>
+              </div>
               <div class="tm-gallery-item category-1">
                 <figure class="effect-bubba">
                   <img
