--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
 			<p style="text-align:center; background-color:pink; "><u>Fee Structure</u></p>
 			  <br>
 			  <table style="width:100%">
-  <table><thead>
+ <p>Daycare Rates <br></p> <table><thead>
     <th bgcolor="lightgreen">Child Age</th>
     <th bgcolor="yellow">Fee per Month (17 days or more)</th>
   </thead>
@@ -289,6 +289,43 @@ becoming co-learners, co-researchers, and co-imagineers of possibilities.
   </tr>
   </tbody>
 </table>
+<p>OSC Rates<br></p>
+<table><thead>
+    <th bgcolor="lightgreen">Time</th>
+    <th bgcolor="yellow">Fee per Month (17 days or more)</th>
+  </thead>
+  <tbody>
+  <tr>
+    <td bgcolor="lightgreen">Full Time (100+ hours)</td>
+    <td bgcolor="yellow">$825</td>
+  </tr>
+   <tr>
+    <td bgcolor="lightgreen">Part Time</td>
+    <td bgcolor="yellow">$600</td>
+  </tr>
+  </tbody>
+</table>
+				  <p>OSC Rates DURING SCHOOL<br></p>
+<table><thead>
+    <th bgcolor="lightgreen">Time</th>
+    <th bgcolor="yellow">Fee per Month (17 days or more)</th>
+  </thead>
+  <tbody>
+  <tr>
+    <td bgcolor="lightgreen">Full Time (100+ hours)</td>
+    <td bgcolor="yellow">$825</td>
+  </tr>
+   <tr>
+    <td bgcolor="lightgreen">50-99 hours</td>
+    <td bgcolor="yellow">$600</td>
+  </tr>
+	  <tr>
+    <td bgcolor="lightgreen">25-49 hours</td>
+    <td bgcolor="yellow">$500</td>
+	  </tr>
+  </tbody>
+</table>
+				  <br>Minimum OSC hours are 25/month.<br>
 <br> Overtime Rate (more than 9 hrs 30 mins) = $10.00/hr<br><br>
 
 <p style="text-align:center; background-color:pink; "><b>Subsidy available for eligible parents. <b></p><br><br>
