--- a/about.html
+++ b/about.html
@@ -234,8 +234,8 @@ includes computers, television, movies, iPads, internet, video games, etc.</ul>
                   Contact
                 </h3>
                 <p class="tm-call-to-action-description">
-				Address - 4601 49 AVE, T4V 0M6, Camrose, AB, Canada.<br>
-						Email - littleangels@camrosecate.ca <br>		
+				Address - 4907 47 Street, T4V 1J9, Camrose, AB, Canada.<br>
+						Email - littleangels@camrosecare.ca <br>		
 				Phone - (780) 678-0701 <span style="color:red">(Faran Syed)</span><br>
 				Facebook - <a href="https://facebook.com/camroselittleangels.ca"> facebook.com/camroselittleangels.ca</a>
                 </p>
